# machineatubes

./: .gitignore  README.md  SCENARIO MACHINE A TUBES.pages  doucetristesse.json  emerveillementnaif.json  jesuisnulle 4(1).xml  jesuisnulle4.json  jesuisnulle4.xml  long8.mid  notez.txt  pyproject.toml  short4.mid  song.json  song.xml  start.sh  start_machine.sh  super.json  test.json  test.py  vid id
borne/: addons.php  autoloader.php  cereproc.php  cereproc_dedicace.php  cereprocs_logins.php  composer.json  create_tube.php  did_getTalk.php  did_key.php  fuzzy.sql  generate_audio_files.php  gpio.php  index.php  json_init.php  lyrics.php  p1.php  p5.php  p6.php  p8.php  p_singing.php  p_top.php  pn.php  song_format.php  song_titles.sql  styles.css  texts_dedicace.php
borne/Classes/: Database.php  Machine.php  Syll.php  Tube.php  midiequiv.php
borne/interface/: get_titles.php  init.php  save_init.php
borne/lyrics/Ab/: Ab0.csv  Ab1.csv  Ab10.csv  Ab11.csv  Ab12.csv  Ab13.csv  Ab14.csv  Ab15.csv  Ab16.csv  Ab17.csv  Ab18.csv  Ab19.csv  Ab2.csv  Ab20.csv  Ab21.csv  Ab22.csv  Ab23.csv  Ab24.csv  Ab25.csv  Ab26.csv  Ab27.csv  Ab28.csv  Ab29.csv  Ab3.csv  Ab30.csv  Ab31.csv  Ab32.csv  Ab33.csv  Ab34.csv  Ab35.csv  Ab36.csv  Ab37.csv  Ab38.csv  Ab39.csv  Ab4.csv  Ab40.csv  Ab41.csv  Ab42.csv  Ab43.csv  Ab44.csv  (+39 more)
borne/lyrics/C/: C0.csv  C1.csv  C10.csv  C11.csv  C2.csv  (+85 more)
examples/: index.html
machine/: ctrl.html  index.html  machine.html
machineatubes/: __init__.py  did_key  machineatubes.py  main.py  parser.py  server.py  tube.py  ui.html
ui/: ctrl.html  machine.html
(+128 files in other folders)
