[project]
name = "machineatubes"
version = "0.2"
authors = [
    {name = "Borel Clément", email = "borelclement@pm.me"},
]
description = "La Machine à Tubes"
requires-python = ">=3.8"
dependencies = [
    "rtmidi2",
    "pywebview",
    "flask",
]
[tool.setuptools]
packages = ["machineatubes"]

[project.scripts]
mat = "machineatubes.main:main"